--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="zxx">
     
-<!-- Mirrored from templates.envytheme.com/seku/default/privacy-policy.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 07 Mar 2022 00:16:43 GMT -->
+<!-- Mirrored from templates.envytheme.com/Randstad Technologies/default/privacy-policy.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 07 Mar 2022 00:16:43 GMT -->
 <head>
 		<!-- Required meta tags -->
 		<meta charset="utf-8">
@@ -35,7 +35,7 @@
 		<!-- Favicon -->
 		<link rel="icon" type="image/png" href="assets/img/favicon.png">
 		<!-- Title -->
-		<title>Seku - Cyber Security Company HTML Template</title>
+		<title>Randstad Technologies - Cyber Security Company HTML Template</title>
     </head>
 
     <body>
@@ -333,12 +333,12 @@
 		<section class="terms-conditions ptb-100">
 			<div class="container">
 				<div class="single-privacy">
-					<h3 class="mt-0">Welcome To Seku Privacy Policy</h3>
+					<h3 class="mt-0">Welcome To Randstad Technologies Privacy Policy</h3>
 					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. scrambled it to make a type specimen book.</p>
 
 					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley.</p>
 
-					<h3>Welcome To Help Seku Privacy</h3>
+					<h3>Welcome To Help Randstad Technologies Privacy</h3>
 					<ul>
 						<li>
 							<p><strong>01.</strong> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, tempora laboriosam porro fugit debitis, dolorem natus assumenda facilis in ut reiciendis laborum sapiente minima libero quas praesentium ex rerum eos. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates nulla porro commodi illum necessitatibus, dicta officiis dolore iusto quaerat officia alias blanditiis, in ea non eveniet? Ipsam neque harum in. quas praesentium ex rerum eos</p>
@@ -548,7 +548,7 @@
 					<div class="col-lg-6">
 						<div class="copy-right">
 							<p>
-								Copyright <i class="bx bx-copyright"></i>2022 Seku. Designed By 
+								Copyright <i class="bx bx-copyright"></i>2022 Randstad Technologies. Designed By 
 								<a href="https://envytheme.com/" target="blank">EnvyTheme</a>
 							</p>
 						</div>
@@ -613,5 +613,5 @@
 		<script src="assets/js/custom.js"></script>
     </body>
 
-<!-- Mirrored from templates.envytheme.com/seku/default/privacy-policy.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 07 Mar 2022 00:16:43 GMT -->
+<!-- Mirrored from templates.envytheme.com/Randstad Technologies/default/privacy-policy.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 07 Mar 2022 00:16:43 GMT -->
 </html>
