--- a/services-style-three.html
+++ b/services-style-three.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="zxx">
     
-<!-- Mirrored from templates.envytheme.com/seku/default/services-style-three.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 07 Mar 2022 00:16:44 GMT -->
+<!-- Mirrored from templates.envytheme.com/Randstad Technologies/default/services-style-three.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 07 Mar 2022 00:16:44 GMT -->
 <head>
 		<!-- Required meta tags -->
 		<meta charset="utf-8">
@@ -35,7 +35,7 @@
 		<!-- Favicon -->
 		<link rel="icon" type="image/png" href="assets/img/favicon.png">
 		<!-- Title -->
-		<title>Seku - Cyber Security Company HTML Template</title>
+		<title>Randstad Technologies - Cyber Security Company HTML Template</title>
     </head>
 
     <body>
@@ -499,7 +499,7 @@
 		<section class="project-area pb-100">
 			<div class="container-fluid p-0">
 				<div class="section-title">
-					<h2>Seku Recent Services</h2>
+					<h2>Randstad Technologies Recent Services</h2>
 					<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus quam neque quibusdam corrupti aspernatur corporis alias nisi dolorum expedita veritatis voluptates minima.</p>
 				</div>
 
@@ -720,7 +720,7 @@
 					<div class="col-lg-6">
 						<div class="copy-right">
 							<p>
-								Copyright <i class="bx bx-copyright"></i>2022 Seku. Designed By 
+								Copyright <i class="bx bx-copyright"></i>2022 Randstad Technologies. Designed By 
 								<a href="https://envytheme.com/" target="blank">EnvyTheme</a>
 							</p>
 						</div>
@@ -785,5 +785,5 @@
 		<script src="assets/js/custom.js"></script>
     </body>
 
-<!-- Mirrored from templates.envytheme.com/seku/default/services-style-three.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 07 Mar 2022 00:16:44 GMT -->
+<!-- Mirrored from templates.envytheme.com/Randstad Technologies/default/services-style-three.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 07 Mar 2022 00:16:44 GMT -->
 </html>
