--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="zxx">
     
-<!-- Mirrored from templates.envytheme.com/seku/default/404.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 07 Mar 2022 00:16:43 GMT -->
+<!-- Mirrored from templates.envytheme.com/Randstad Technologies/default/404.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 07 Mar 2022 00:16:43 GMT -->
 <head>
 		<!-- Required meta tags -->
 		<meta charset="utf-8">
@@ -35,7 +35,7 @@
 		<!-- Favicon -->
 		<link rel="icon" type="image/png" href="assets/img/favicon.png">
 		<!-- Title -->
-		<title>Seku - Cyber Security Company HTML Template</title>
+		<title>Randstad Technologies - Cyber Security Company HTML Template</title>
     </head>
 
     <body>
@@ -106,5 +106,5 @@
 		<script src="assets/js/custom.js"></script>
     </body>
 
-<!-- Mirrored from templates.envytheme.com/seku/default/404.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 07 Mar 2022 00:16:44 GMT -->
+<!-- Mirrored from templates.envytheme.com/Randstad Technologies/default/404.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 07 Mar 2022 00:16:44 GMT -->
 </html>
