--- a/checkout.html
+++ b/checkout.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="zxx">
     
-<!-- Mirrored from templates.envytheme.com/seku/default/checkout.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 07 Mar 2022 00:17:03 GMT -->
+<!-- Mirrored from templates.envytheme.com/Randstad Technologies/default/checkout.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 07 Mar 2022 00:17:03 GMT -->
 <head>
 		<!-- Required meta tags -->
 		<meta charset="utf-8">
@@ -35,7 +35,7 @@
 		<!-- Favicon -->
 		<link rel="icon" type="image/png" href="assets/img/favicon.png">
 		<!-- Title -->
-		<title>Seku - Cyber Security Company HTML Template</title>
+		<title>Randstad Technologies - Cyber Security Company HTML Template</title>
     </head>
 
     <body>
@@ -747,7 +747,7 @@
 					<div class="col-lg-6">
 						<div class="copy-right">
 							<p>
-								Copyright <i class="bx bx-copyright"></i>2022 Seku. Designed By 
+								Copyright <i class="bx bx-copyright"></i>2022 Randstad Technologies. Designed By 
 								<a href="https://envytheme.com/" target="blank">EnvyTheme</a>
 							</p>
 						</div>
@@ -812,5 +812,5 @@
 		<script src="assets/js/custom.js"></script>
     </body>
 
-<!-- Mirrored from templates.envytheme.com/seku/default/checkout.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 07 Mar 2022 00:17:03 GMT -->
+<!-- Mirrored from templates.envytheme.com/Randstad Technologies/default/checkout.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 07 Mar 2022 00:17:03 GMT -->
 </html>
