--- a/team.html
+++ b/team.html
@@ -35,7 +35,7 @@
 		<!-- Favicon -->
 		<link rel="icon" type="image/png" href="assets/img/favicon.png">
 		<!-- Title -->
-		<title>Randstad Technologies - Cyber Security Company HTML Template</title>
+		<title>Randstad Technologies - Cyber Security Services</title>
     </head>
 
     <body>
