--- a/about.html
+++ b/about.html
@@ -57,13 +57,13 @@
 								<li>
 									<a href="https://templates.envytheme.com/cdn-cgi/l/email-protection#2a424f4646456a594f415f04494547">
 										<i class="bx bx-envelope"></i>
-										Email: <span class="__cf_email__" data-cfemail="b4dcd1d8d8dbf4c7d1dfc19ad7dbd9">[email&#160;protected]</span>
+										Email: <span class="__cf_email__" data-cfemail="b4dcd1d8d8dbf4c7d1dfc19ad7dbd9">[sales@randstadusa.com]</span>
 									</a>
 								</li>
 
 								<li>
 									<i class="bx bx-location-plus"></i>
-									658 Lane Drive St. California
+									3090 Nowitzki Way Suite 300, Dallas, TX 75219
 								</li>
 							</ul>
 						</div>
@@ -158,66 +158,7 @@
 											<a href="about.html" class="nav-link active">About</a>
 										</li>
 
-										<li class="nav-item">
-											<a href="#" class="nav-link">
-												Pages
-												<i class="bx bx-chevron-right"></i>
-											</a>
-
-											<ul class="dropdown-menu">
-												<li class="nav-item">
-													<a href="pricing.html" class="nav-link">Pricing</a>
-												</li>
-
-												<li class="nav-item">
-													<a href="testimonials.html" class="nav-link">Testimonials</a>
-												</li>
-
-												<li class="nav-item">
-													<a href="team.html" class="nav-link">Team</a>
-												</li>
-
-												<li class="nav-item">
-													<a href="faq.html" class="nav-link">FAQ</a>
-												</li>
-
-												<li class="nav-item">
-													<a href="terms-conditions.html" class="nav-link">Terms & Conditions</a>
-												</li>
-
-												<li class="nav-item">
-													<a href="privacy-policy.html" class="nav-link">Privacy Policy</a>
-												</li>
-
-												<li class="nav-item">
-													<a href="#" class="nav-link">
-														User
-														<i class="bx bx-chevron-right"></i>
-													</a>
-
-													<ul class="dropdown-menu">
-														<li class="nav-item">
-															<a href="log-in.html" class="nav-link">Log In</a>
-														</li>
-														<li class="nav-item">
-															<a href="sign-in.html" class="nav-link">Sign In</a>
-														</li>
-														<li class="nav-item">
-															<a href="recover-password.html" class="nav-link">Recover Password</a>
-														</li>
-													</ul>
-												</li>
-
-												<li class="nav-item">
-													<a href="coming-soon.html" class="nav-link">Coming Soon</a>
-												</li>
-
-												<li class="nav-item">
-													<a href="404.html" class="nav-link">404 Error Page</a>
-												</li>
-											</ul>
-										</li>
-
+										
 										<li class="nav-item">
 											<a href="#" class="nav-link">
 												Services
