--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -63,7 +63,7 @@
 
 								<li>
 									<i class="bx bx-location-plus"></i>
-									658 Lane Drive St. California
+									3090 Nowitzki Way Suite 300, Dallas, TX 75219
 								</li>
 							</ul>
 						</div>
