--- a/about.html
+++ b/about.html
@@ -181,49 +181,7 @@
 											</ul>
 										</li>
 
-										<li class="nav-item">
-											<a href="#" class="nav-link">
-												Shop
-												<i class="bx bx-chevron-right"></i>
-											</a>
-
-											<ul class="dropdown-menu">
-												<li class="nav-item">
-													<a href="shop.html" class="nav-link">Shop</a>
-												</li>
-												<li class="nav-item">
-													<a href="cart.html" class="nav-link">Cart</a>
-												</li>
-												<li class="nav-item">
-													<a href="checkout.html" class="nav-link">Checkout</a>
-												</li>
-												<li class="nav-item">
-													<a href="product-details.html" class="nav-link">Product Details</a>
-												</li>
-											</ul>
-										</li>
-
-										<li class="nav-item">
-											<a href="#" class="nav-link">
-												Blog
-												<i class="bx bx-chevron-right"></i>
-											</a>
-
-											<ul class="dropdown-menu">
-												<li class="nav-item">
-													<a href="blog-grid.html" class="nav-link">Blog Grid</a>
-												</li>
-												<li class="nav-item">
-													<a href="blog-left-sidebar.html" class="nav-link">Blog Left Sidebar</a>
-												</li>
-												<li class="nav-item">
-													<a href="blog-right-sidebar.html" class="nav-link">Blog Right Sidebar</a>
-												</li>
-												<li class="nav-item">
-													<a href="blog-details.html" class="nav-link">Blog Details</a>
-												</li>
-											</ul>
-										</li>
+										
 
 										<li class="nav-item">
 											<a href="contact.html" class="nav-link">Contact</a>
@@ -233,7 +191,7 @@
 									<!-- Start Other Option -->
 									<div class="others-option">
 										<div class="get-quote">
-											<a href="#" class="default-btn">
+											<a href="mailto:sales@randstadusa.com" class="default-btn">
 												Get A Quote
 											</a>
 										</div>
@@ -249,22 +207,9 @@
 		</header>
 		<!-- End Heder Area -->
 
-		<!-- Start Page Title Area -->
-		<div class="page-title-area bg-1">
-			<div class="container">
-				<div class="page-title-content">
-					<h2>About</h2>
-					<ul>
-						<li>
-							<a href="index.html">
-								Home 
-							</a>
-						</li>
 
-						<li class="active">About</li>
-					</ul>
-				</div>
-			</div>
+		<!-- Start Page Title Area -->
+		<div class="page-title-area bg-9">
 		</div>
 		<!-- End Page Title Area -->
 
@@ -274,7 +219,7 @@
 				<div class="row">
 					<div class="col-lg-6">
 						<div class="cybersecurity-content">
-							<h2>24/7 Cybersecurity Operation Center</h2>
+							<h2>24/7 Security & Management Operationss Center</h2>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse.</p>
 
 							<div class="row">
