--- a/index-6.html
+++ b/index-6.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="zxx">
     
-<!-- Mirrored from templates.envytheme.com/Randstad Technologies/default/index-6.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 07 Mar 2022 00:15:14 GMT -->
+<!-- Mirrored from templates.envytheme.com/seku/default/index-6.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 07 Mar 2022 00:15:14 GMT -->
 <head>
 		<!-- Required meta tags -->
 		<meta charset="utf-8">
@@ -35,7 +35,7 @@
 		<!-- Favicon -->
 		<link rel="icon" type="image/png" href="assets/img/favicon.png">
 		<!-- Title -->
-		<title>Randstad Technologies - Cyber Security Services</title>
+		<title>Seku - Cyber Security Company HTML Template</title>
     </head>
 
     <body class="home-six">
@@ -379,7 +379,7 @@
 
                 <div class="sidebar-about">
                     <div class="title">
-                        <p>Randstad Technologies is a high quality video production house. We make a awesome branded videos. It is the analogical of film making, but the images are digitally recorded instead of film stock.</p>
+                        <p>Seku is a high quality video production house. We make a awesome branded videos. It is the analogical of film making, but the images are digitally recorded instead of film stock.</p>
                     </div>
                 </div>
 
@@ -1254,7 +1254,7 @@
 				<div class="row align-items-center">
 					<div class="col-lg-6 col-md-6">
 						<p>
-							Copyright <i class="bx bx-copyright"></i>2022 Randstad Technologies. Designed By 
+							Copyright <i class="bx bx-copyright"></i>2022 Seku. Designed By 
 							<a href="https://envytheme.com/" target="blank">EnvyTheme</a>
 						</p>
 					</div>
@@ -1320,5 +1320,5 @@
 		<script src="assets/js/custom.js"></script>
     </body>
 
-<!-- Mirrored from templates.envytheme.com/Randstad Technologies/default/index-6.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 07 Mar 2022 00:15:52 GMT -->
+<!-- Mirrored from templates.envytheme.com/seku/default/index-6.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 07 Mar 2022 00:15:52 GMT -->
 </html>
