--- a/index-7.html
+++ b/index-7.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="zxx">
     
-<!-- Mirrored from templates.envytheme.com/Randstad Technologies/default/index-7.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 07 Mar 2022 00:15:52 GMT -->
+<!-- Mirrored from templates.envytheme.com/seku/default/index-7.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 07 Mar 2022 00:15:52 GMT -->
 <head>
 		<!-- Required meta tags -->
 		<meta charset="utf-8">
@@ -35,7 +35,7 @@
 		<!-- Favicon -->
 		<link rel="icon" type="image/png" href="assets/img/favicon.png">
 		<!-- Title -->
-		<title>Randstad Technologies - Cyber Security Services</title>
+		<title>Seku - Cyber Security Company HTML Template</title>
     </head>
 
     <body>
@@ -47,8 +47,8 @@
 		</div>
 		<!-- End Preloader Area -->
 
-		<!-- Start Randstad Technologies New Navbar Area -->
-		<div class="Randstad Technologies-new-nav-area">
+		<!-- Start Seku New Navbar Area -->
+		<div class="seku-new-nav-area">
 			<div class="navbar-area">
 				<!-- Menu For Mobile Device -->
 				<div class="mobile-nav">
@@ -269,7 +269,7 @@
 				</div>
 			</div>
 		</div>
-		<!-- End  Randstad Technologies New Navbar  Area -->
+		<!-- End  Seku New Navbar  Area -->
 
 		<!-- Start New Main Banner Area -->
 		<section class="new-main-banner-area">
@@ -335,26 +335,26 @@
 		</section>
 		<!-- End New Main Banner Area -->
 		
-		<!-- Start Randstad Technologies Features Area -->
-		<div class="Randstad Technologies-features-area pt-100 pb-75">
+		<!-- Start Seku Features Area -->
+		<div class="seku-features-area pt-100 pb-75">
 			<div class="container">
 				<div class="row justify-content-center">
 					<div class="col-lg-4 col-sm-6">
-						<div class="single-Randstad Technologies-features-card">
+						<div class="single-seku-features-card">
 							<h3><img src="assets/img/more-home/features/features-1.png" alt="image"> Security</h3>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
 						</div>
 					</div>
 	
 					<div class="col-lg-4 col-sm-6">
-						<div class="single-Randstad Technologies-features-card">
+						<div class="single-seku-features-card">
 							<h3><img src="assets/img/more-home/features/features-2.png" alt="image"> Privacy</h3>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
 						</div>
 					</div>
 	
 					<div class="col-lg-4 col-sm-6">
-						<div class="single-Randstad Technologies-features-card">
+						<div class="single-seku-features-card">
 							<h3><img src="assets/img/more-home/features/features-3.png" alt="image"> Industry Certified</h3>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
 						</div>
@@ -362,7 +362,7 @@
 				</div>
 			</div>
 		</div>
-		<!-- End Randstad Technologies Features Area -->
+		<!-- End Seku Features Area -->
 
 		<!-- Start Safer World Area -->
 		<div class="safer-world-area ptb-100">
@@ -1388,7 +1388,7 @@
                 </div>
             </div>
             <div class="copyright-style-two-with-color">
-                <p>Copyright @ 2022 <b>Randstad Technologies</b> All Rights Reserved by <a href="https://envytheme.com/" target="_blank">EnvyTheme</a></p>
+                <p>Copyright @ 2022 <b>Seku</b> All Rights Reserved by <a href="https://envytheme.com/" target="_blank">EnvyTheme</a></p>
             </div>
             <div class="footer-shape-1">
                 <img src="assets/img/more-home/footer/footer-shape-1.png" alt="image">
@@ -1445,5 +1445,5 @@
 		<script src="assets/js/custom.js"></script>
     </body>
 
-<!-- Mirrored from templates.envytheme.com/Randstad Technologies/default/index-7.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 07 Mar 2022 00:16:16 GMT -->
+<!-- Mirrored from templates.envytheme.com/seku/default/index-7.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 07 Mar 2022 00:16:16 GMT -->
 </html>
