--- a/index-9.html
+++ b/index-9.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="zxx">
     
-<!-- Mirrored from templates.envytheme.com/Randstad Technologies/default/index-9.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 07 Mar 2022 00:16:22 GMT -->
+<!-- Mirrored from templates.envytheme.com/seku/default/index-9.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 07 Mar 2022 00:16:22 GMT -->
 <head>
 		<!-- Required meta tags -->
 		<meta charset="utf-8">
@@ -35,7 +35,7 @@
 		<!-- Favicon -->
 		<link rel="icon" type="image/png" href="assets/img/favicon.png">
 		<!-- Title -->
-		<title>Randstad Technologies - Cyber Security Services</title>
+		<title>Seku - Cyber Security Company HTML Template</title>
     </head>
 
     <body class="body-with-black-color">
@@ -47,7 +47,7 @@
 		</div>
 		<!-- End Preloader Area -->
 
-		<!-- Start Randstad Technologies New Top Header Area -->
+		<!-- Start Seku New Top Header Area -->
 		<div class="new-top-header-area">
 			<div class="container-fluid">
 				<div class="row align-items-center">
@@ -62,7 +62,7 @@
 
 							<li>
 								<i class="bx bx-location-plus"></i>
-								3090 Nowitzki Way Suite 300, Dallas, TX 75219
+								658 Lane Drive St. California
 							</li>
 						</ul>
 					</div>
@@ -95,10 +95,10 @@
 				</div>
 			</div>
 		</div>
-		<!-- Start Randstad Technologies New Top Header Area -->
+		<!-- Start Seku New Top Header Area -->
 
-		<!-- Start Randstad Technologies New Navbar Area -->
-		<div class="Randstad Technologies-new-nav-area nav-with-black-color">
+		<!-- Start Seku New Navbar Area -->
+		<div class="seku-new-nav-area nav-with-black-color">
 			<div class="navbar-area">
 				<!-- Menu For Mobile Device -->
 				<div class="mobile-nav">
@@ -319,7 +319,7 @@
 				</div>
 			</div>
 		</div>
-		<!-- End  Randstad Technologies New Navbar Area -->
+		<!-- End  Seku New Navbar Area -->
 
 		<!-- Start New Main Banner Area -->
 		<section class="new-main-banner-area-with-black-color">
@@ -354,26 +354,26 @@
 		</section>
 		<!-- End New Main Banner Area -->
 		
-		<!-- Start Randstad Technologies Features Area -->
-		<div class="Randstad Technologies-features-area pb-75">
+		<!-- Start Seku Features Area -->
+		<div class="seku-features-area pb-75">
 			<div class="container">
 				<div class="row justify-content-center">
 					<div class="col-lg-4 col-sm-6">
-						<div class="single-Randstad Technologies-features-card bg-382549">
+						<div class="single-seku-features-card bg-382549">
 							<h3><img src="assets/img/more-home/features/features-1.png" alt="image"> Security</h3>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
 						</div>
 					</div>
 	
 					<div class="col-lg-4 col-sm-6">
-						<div class="single-Randstad Technologies-features-card bg-382549">
+						<div class="single-seku-features-card bg-382549">
 							<h3><img src="assets/img/more-home/features/features-2.png" alt="image"> Privacy</h3>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
 						</div>
 					</div>
 	
 					<div class="col-lg-4 col-sm-6">
-						<div class="single-Randstad Technologies-features-card bg-382549">
+						<div class="single-seku-features-card bg-382549">
 							<h3><img src="assets/img/more-home/features/features-3.png" alt="image"> Industry Certified</h3>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
 						</div>
@@ -381,7 +381,7 @@
 				</div>
 			</div>
 		</div>
-		<!-- End Randstad Technologies Features Area -->
+		<!-- End Seku Features Area -->
 		
 		<!-- Start Safer World Area -->
 		<div class="safer-world-area-without-color">
@@ -1270,7 +1270,7 @@
                 </div>
             </div>
             <div class="copyright-style-two-with-color">
-                <p>Copyright @ 2022 <b>Randstad Technologies</b> All Rights Reserved by <a href="https://envytheme.com/" target="_blank">EnvyTheme</a></p>
+                <p>Copyright @ 2022 <b>Seku</b> All Rights Reserved by <a href="https://envytheme.com/" target="_blank">EnvyTheme</a></p>
             </div>
             <div class="footer-shape-1">
                 <img src="assets/img/more-home/footer/footer-shape-1.png" alt="image">
@@ -1327,5 +1327,5 @@
 		<script src="assets/js/custom.js"></script>
     </body>
 
-<!-- Mirrored from templates.envytheme.com/Randstad Technologies/default/index-9.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 07 Mar 2022 00:16:37 GMT -->
+<!-- Mirrored from templates.envytheme.com/seku/default/index-9.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 07 Mar 2022 00:16:37 GMT -->
 </html>
