--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="zxx">
     
-<!-- Mirrored from templates.envytheme.com/Randstad Technologies/default/terms-conditions.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 07 Mar 2022 00:16:43 GMT -->
+<!-- Mirrored from templates.envytheme.com/seku/default/terms-conditions.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 07 Mar 2022 00:16:43 GMT -->
 <head>
 		<!-- Required meta tags -->
 		<meta charset="utf-8">
@@ -35,7 +35,7 @@
 		<!-- Favicon -->
 		<link rel="icon" type="image/png" href="assets/img/favicon.png">
 		<!-- Title -->
-		<title>Randstad Technologies - Cyber Security Services</title>
+		<title>Seku - Cyber Security Company HTML Template</title>
     </head>
 
     <body>
@@ -63,7 +63,7 @@
 
 								<li>
 									<i class="bx bx-location-plus"></i>
-									3090 Nowitzki Way Suite 300, Dallas, TX 75219
+									658 Lane Drive St. California
 								</li>
 							</ul>
 						</div>
@@ -333,7 +333,7 @@
 		<section class="terms-conditions-area ptb-100">
 			<div class="container">
 				<div class="single-privacy">
-					<h3 class="mt-0">Welcome To Randstad Technologies Terms Conditions</h3>
+					<h3 class="mt-0">Welcome To Seku Terms Conditions</h3>
 
 					<ul>
 						<li>
@@ -353,12 +353,12 @@
 						</li>
 					</ul>
 
-					<h3>Welcome To Help Randstad Technologies Conditions</h3>
+					<h3>Welcome To Help Seku Conditions</h3>
 					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
 
 					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
 
-					<h3>Welcome To Services Randstad Technologies Conditions</h3>
+					<h3>Welcome To Services Seku Conditions</h3>
 					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
 
 					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
@@ -605,7 +605,7 @@
 					<div class="col-lg-6">
 						<div class="copy-right">
 							<p>
-								Copyright <i class="bx bx-copyright"></i>2022 Randstad Technologies. Designed By 
+								Copyright <i class="bx bx-copyright"></i>2022 Seku. Designed By 
 								<a href="https://envytheme.com/" target="blank">EnvyTheme</a>
 							</p>
 						</div>
@@ -670,5 +670,5 @@
 		<script src="assets/js/custom.js"></script>
     </body>
 
-<!-- Mirrored from templates.envytheme.com/Randstad Technologies/default/terms-conditions.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 07 Mar 2022 00:16:43 GMT -->
+<!-- Mirrored from templates.envytheme.com/seku/default/terms-conditions.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 07 Mar 2022 00:16:43 GMT -->
 </html>
