--- a/sign-in.html
+++ b/sign-in.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="zxx">
     
-<!-- Mirrored from templates.envytheme.com/Randstad Technologies/default/sign-in.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 07 Mar 2022 00:16:43 GMT -->
+<!-- Mirrored from templates.envytheme.com/seku/default/sign-in.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 07 Mar 2022 00:16:43 GMT -->
 <head>
 		<!-- Required meta tags -->
 		<meta charset="utf-8">
@@ -35,7 +35,7 @@
 		<!-- Favicon -->
 		<link rel="icon" type="image/png" href="assets/img/favicon.png">
 		<!-- Title -->
-		<title>Randstad Technologies - Cyber Security Services</title>
+		<title>Seku - Cyber Security Company HTML Template</title>
     </head>
 
     <body>
@@ -63,7 +63,7 @@
 
 								<li>
 									<i class="bx bx-location-plus"></i>
-									3090 Nowitzki Way Suite 300, Dallas, TX 75219
+									658 Lane Drive St. California
 								</li>
 							</ul>
 						</div>
@@ -398,7 +398,7 @@
 								<div class="agree-label">
 									<input type="checkbox" id="chb1">
 									<label for="chb1">
-										I agree with Randstad Technologies 
+										I agree with seku 
 										<a href="privacy-policy.html">Privacy Policy</a>
 									</label>
 								</div>
@@ -406,7 +406,7 @@
 								<div class="agree-label">
 									<input type="checkbox" id="chb2">
 									<label for="chb2">
-										I agree with Randstad Technologies 
+										I agree with seku 
 										<a href="terms-conditions.html">Terms & Conditions</a>
 									</label>
 								</div>
@@ -611,7 +611,7 @@
 					<div class="col-lg-6">
 						<div class="copy-right">
 							<p>
-								Copyright <i class="bx bx-copyright"></i>2022 Randstad Technologies. Designed By 
+								Copyright <i class="bx bx-copyright"></i>2022 Seku. Designed By 
 								<a href="https://envytheme.com/" target="blank">EnvyTheme</a>
 							</p>
 						</div>
@@ -676,5 +676,5 @@
 		<script src="assets/js/custom.js"></script>
     </body>
 
-<!-- Mirrored from templates.envytheme.com/Randstad Technologies/default/sign-in.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 07 Mar 2022 00:16:43 GMT -->
+<!-- Mirrored from templates.envytheme.com/seku/default/sign-in.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 07 Mar 2022 00:16:43 GMT -->
 </html>
